--- a/examples/CaseAPI/caseapi.yaml
+++ b/examples/CaseAPI/caseapi.yaml
@@ -1,4 +1,4 @@
-openapi: '3.0'
+openapi: '3.0.0'
 info:
   title: LogRhythm Case API
   version: '3.0.0'
@@ -7,7 +7,7 @@ servers:
   - url: https://localhost:8501/lr-case-api
     description: Local API Gateway (https)
 paths:
-  /cases:
+  '/cases':
     get:
       operationId: listCases
       summary: List Cases
@@ -24,16 +24,56 @@ paths:
         '200':
           description: The returned case.
           content:
-            application/vnd.case.list.v1+json:
+            'application/vnd.logrhythm.case.list.v1+json':
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/CaseV1'
-            application/vnd.case.list.v2+json:
+            'application/vnd.logrhythm.case.list.v2+json':
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/CaseV2'
+  '/cases/{id}/evidence':
+    post:
+      operationId: createEvidence
+      summary: Create Evidence
+      description: Add a new piece of evidence to a case.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The id of the Case to add evidence to.
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        content:
+          'application/vnd.logrhythm.case-evidence.list.v1+json':
+            schema:
+              type: array
+              items:
+                type: object
+                oneOf:
+                  - $ref: '#/components/schemas/NoteEvidence'
+                  - $ref: '#/components/schemas/AlarmEvidence'
+                discriminator:
+                  propertyName: evidenceType
+      responses:
+        '201':
+          description: The created evidence
+          content:
+            'application/vnd.logrhythm.case-evidence.list.v1+json':
+              schema:
+                type: array
+                items:
+                  type: object
+                  oneOf:
+                    - $ref: '#/components/schemas/NoteEvidence'
+                    - $ref: '#/components/schemas/AlarmEvidence'
+                  discriminator:
+                    propertyName: evidenceType
+
 components:
   schemas:
     CaseV1:
