feat: template for operations (#5)
* feat: template for operations

* refactor stuff, get bodies and models kind of working

--- a/examples/CaseAPI/caseapi.yaml
+++ b/examples/CaseAPI/caseapi.yaml
@@ -79,7 +79,7 @@ paths:
           schema:
             type: string
             format: uuid
-      operationId: updateCase
+      operationId: patchCase
       requestBody:
         content:
           'application/vnd.logrhythm.case.v1.merge-patch+json':
